2015-06-05  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/gsad.c: Guard thread initialization macros deprecated in
	libgcrypt >= 1.6.0 with defines.

2015-06-04  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (filter-window-part): Do not apply gsa:i18n
	to column names as they should already be translated.
	(task-icons): Set context for "Next due" strings to "Task|Schedule".

2015-06-04  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Consolidate text made out of multiple parts into single strings and
	ensure i18n default is always the same as msgid. Also add missing
	comments referring to dummy templates and correct some template names
	in dynamic_strings.xsl.

	* src/html/classic/dynamic_strings.xsl: Give various templates their
	correct names: type-details, type-filter, type-edit.
	(type-global, type-owned): New templates.
	(type-details): Add Report and Result.
	(type-details-long, type-export, type-export-xml)
	(type-export-multiple-filtered-xml): New templates.
	(type-filter): Add Report and Result.
	(type-permissions, type-new-filter, type-action-denied): New templates.
	(permission-descriptions): Capitalize "Description" in context and
	add strings for specific resources.
	(type-bulk-delete-confirm, type-bulk-trash-confirm, bulk-actions): New
	templates.

	* src/html/classic/omp.xsl (): Add gsa-i18n extension prefix.
	(gsa:permission-description, gsa:view_details_title)
	(filter-window-part, edit-header-icons, get-settings-resource)
	(list-window-line-icons, user-tags-window, resource-permissions-window)
	(task-icons, list-window, details-header-icons, task)
	(lsc_credential [trash], alert [trash], alert [details]
	(filter [trash], tag [trash], target [trash], html-config-table)
	(config [trash], schedule [trash], scanner [trash], slave [trash])
	(get_info_allinfo_action, cve-details, cpe-details, ovaldef-details)
	(cert_bund_adv-details, dfn_cert_adv-details, nvt-details)